merkez koordinatı Türkiye olarak değiştirildi.

--- a/src/index.html
+++ b/src/index.html
@@ -18,14 +18,14 @@
     <div id="map" class="map"></div>
     <script type="text/javascript">
         var map = new ol.Map({
-            target: 'map',
+            target: 'map', // harita olarak gösterilecek div'in id'si
             layers: [
                 new ol.layer.Tile({
                     source: new ol.source.OSM()
                 })
             ],
             view: new ol.View({
-                center: ol.proj.fromLonLat([37.41, 8.82]),
+                center: ol.proj.fromLonLat([41.050335, 28.895751]),
                 zoom: 4
             })
         });
