--- a/src/index.html
+++ b/src/index.html
@@ -25,8 +25,10 @@
                 })
             ],
             view: new ol.View({
-                center: ol.proj.fromLonLat([41.050335, 28.895751]),
-                zoom: 4
+                // BingMap'ten alınan koordinat 41,050335, 28,895751 
+                // Yerlerini değiştirmek gerekiyor!
+                center: ol.proj.fromLonLat([28.895751, 41.050335]),
+                zoom: 10
             })
         });
     </script>
