--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,6 @@
     </div>
     <script src="../scripts/ol.js"></script>
     <script type="text/javascript">
-        debugger;
         var vectorSource = new ol.source.Vector({});
 
         var hqMarketLocation = new ol.Feature({
@@ -66,6 +65,11 @@
                 center: ol.proj.fromLonLat([28.895751, 41.050335]),
                 zoom: 10
             })
+        });
+
+        // ---------------- HARITA OLAYLARI -------------
+        map.on('click', function() {
+            console.log(arguments);
         });
     </script>
 </body>
