event dinleyicileri arayüzdeki yönetim inputlarına bağlandı
jquery eklendi

--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,13 @@
 
 <body>
     <div id="container">
-        <section id="header"></section>
+        <section id="header">
+            <div id="map-events">
+                <label>click</label> <input id="map_click" type="checkbox" /> <br />
+                <label>pointerdrag</label> <input id="map_pointerdrag" type="checkbox" /><br />
+                <label>pointermove</label> <input id="map_pointermove" type="checkbox" /><br />
+            </div>
+        </section>
         <section id="content">
             <div id="map" style="float:left; width: 50%"></div>
             <div style="float:right; width: 50%;"></div>
@@ -19,86 +25,117 @@
         <aside id="log-area" style="width: 100%; background-color: lightgray; float: left; height: 300px; overflow:scroll;">
         </aside>
     </div>
+    <script src="../scripts/jquery-3.3.1.min.js"></script>
+
     <script src="../scripts/ol.js"></script>
     <script type="text/javascript">
-        window.LOGAREA = document.getElementById("log-area");
-        var vectorSource = new ol.source.Vector({});
+        jQuery(document).ready(function() {
 
-        var hqMarketLocation = new ol.Feature({
-            geometry: new ol.geom.Point(ol.proj.transform([28.895751, 41.050335], 'EPSG:4326', 'EPSG:3857')),
-            name: 'Market HQ',
-            population: 4000,
-            rainfall: 500
-        });
+            $mapClickCheckbox = $('#map_click');
+            $mapPointerdragCheckbox = $('#map_pointerdrag')
+            $mapPointermoveCheckbox = $('#map_pointermove')
 
-        // for (var i = 1; i < 299; i++) {
-        //     var iconFeature = new ol.Feature({
-        //         geometry: new
-        //         ol.geom.Point(ol.proj.transform([Math.random() * 360 - 180, Math.random() * 180 - 90], 'EPSG:4326', 'EPSG:3857')),
-        //         name: 'Market ' + i,
-        //         population: 4000,
-        //         rainfall: 500
-        //     });
+            var mapClickListen = $mapClickCheckbox.is(':checked');
+            $mapClickCheckbox.change(function() {
+                mapClickListen = !mapClickListen;
+            });
 
-        //     vectorSource.addFeature(iconFeature);
-        // }
+            var mapPointerdragListen = $mapPointerdragCheckbox.is(':checked');
+            $mapPointerdragCheckbox.change(function() {
+                mapPointerdragListen = !mapPointerdragListen;
+            });
 
-        vectorSource.addFeature(hqMarketLocation);
+            var mapPointermoveListen = $mapPointermoveCheckbox.is(':checked');
+            $mapPointermoveCheckbox.change(function() {
+                mapPointermoveListen = !mapPointermoveListen;
+            });
 
-        var hqMarketIcon = new ol.style.Style({
-            image: new ol.style.Icon(({
-                anchor: [0.5, 50],
-                anchorXUnits: 'fraction',
-                anchorYUnits: 'pixels',
-                opacity: '1',
+            window.LOGAREA = document.getElementById("log-area");
+            var vectorSource = new ol.source.Vector({});
 
-                //https://gis.stackexchange.com/questions/130603/how-to-resize-a-feature-and-prevent-it-from-scaling-when-zooming-in-openlayers-3
-                // 
-                scale: 0.05,
-                src: '../img/050-shop.png'
-            }))
-        });
+            var hqMarketLocation = new ol.Feature({
+                geometry: new ol.geom.Point(ol.proj.transform([28.895751, 41.050335], 'EPSG:4326', 'EPSG:3857')),
+                name: 'Market HQ',
+                population: 4000,
+                rainfall: 500
+            });
 
-        var hqMarketVectorLayer = new ol.layer.Vector({
-            source: vectorSource,
-            style: hqMarketIcon
-        });
+            // for (var i = 1; i < 299; i++) {
+            //     var iconFeature = new ol.Feature({
+            //         geometry: new
+            //         ol.geom.Point(ol.proj.transform([Math.random() * 360 - 180, Math.random() * 180 - 90], 'EPSG:4326', 'EPSG:3857')),
+            //         name: 'Market ' + i,
+            //         population: 4000,
+            //         rainfall: 500
+            //     });
 
-        var map = new ol.Map({
-            target: 'map',
-            layers: [
-                new ol.layer.Tile({
-                    source: new ol.source.OSM()
-                }), hqMarketVectorLayer
-            ],
-            view: new ol.View({
-                // BingMap'ten alınan koordinat 41,050335, 28,895751 
-                // Yerlerini değiştirmek gerekiyor!
-                center: ol.proj.fromLonLat([28.895751, 41.050335]),
-                zoom: 10
-            })
-        });
+            //     vectorSource.addFeature(iconFeature);
+            // }
 
-        // ---------------- HARITA OLAYLARI -------------
-        map.on('click', function(event) {
-            var label = document.createElement("label");
-            label.appendChild(document.createTextNode("click: [0]=" + event.coordinate[0] + " [1]=" + event.coordinate[1]))
-            window.LOGAREA.prepend(document.createElement("br"));
-            window.LOGAREA.prepend(label);
-        });
+            vectorSource.addFeature(hqMarketLocation);
 
-        map.on('pointerdrag', function(event) {
-            var label = document.createElement("label");
-            label.appendChild(document.createTextNode("pointerdrag: [0]=" + event.coordinate[0] + " [1]=" + event.coordinate[1]))
-            window.LOGAREA.prepend(document.createElement("br"));
-            window.LOGAREA.prepend(label);
-        });
+            var hqMarketIcon = new ol.style.Style({
+                image: new ol.style.Icon(({
+                    anchor: [0.5, 50],
+                    anchorXUnits: 'fraction',
+                    anchorYUnits: 'pixels',
+                    opacity: '1',
 
-        map.on('pointermove', function(event) {
-            var label = document.createElement("label");
-            label.appendChild(document.createTextNode("pointermove: [0]=" + event.coordinate[0] + " [1]=" + event.coordinate[1]))
-            window.LOGAREA.prepend(document.createElement("br"));
-            window.LOGAREA.prepend(label);
+                    //https://gis.stackexchange.com/questions/130603/how-to-resize-a-feature-and-prevent-it-from-scaling-when-zooming-in-openlayers-3
+                    // 
+                    scale: 0.05,
+                    src: '../img/050-shop.png'
+                }))
+            });
+
+            var hqMarketVectorLayer = new ol.layer.Vector({
+                source: vectorSource,
+                style: hqMarketIcon
+            });
+
+            var map = new ol.Map({
+                target: 'map',
+                layers: [
+                    new ol.layer.Tile({
+                        source: new ol.source.OSM()
+                    }), hqMarketVectorLayer
+                ],
+                view: new ol.View({
+                    // BingMap'ten alınan koordinat 41,050335, 28,895751 
+                    // Yerlerini değiştirmek gerekiyor!
+                    center: ol.proj.fromLonLat([28.895751, 41.050335]),
+                    zoom: 10
+                })
+            });
+
+            // ---------------- HARITA OLAYLARI -------------
+            map.on('click', function(event) {
+                if (mapClickListen) {
+                    var label = document.createElement("label");
+                    label.appendChild(document.createTextNode("click: [0]=" + event.coordinate[0] + " [1]=" + event.coordinate[1]))
+                    window.LOGAREA.prepend(document.createElement("br"));
+                    window.LOGAREA.prepend(label);
+                }
+            });
+
+            map.on('pointerdrag', function(event) {
+                if (mapPointerdragListen) {
+                    var label = document.createElement("label");
+                    label.appendChild(document.createTextNode("pointerdrag: [0]=" + event.coordinate[0] + " [1]=" + event.coordinate[1]))
+                    window.LOGAREA.prepend(document.createElement("br"));
+                    window.LOGAREA.prepend(label);
+                }
+            });
+
+            map.on('pointermove', function(event) {
+                if (mapPointermoveListen) {
+                    var label = document.createElement("label");
+                    label.appendChild(document.createTextNode("pointermove: [0]=" + event.coordinate[0] + " [1]=" + event.coordinate[1]))
+                    window.LOGAREA.prepend(document.createElement("br"));
+                    window.LOGAREA.prepend(label);
+                }
+            });
+
         });
     </script>
 </body>
