--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <link rel="stylesheet" href="../styles/ol.css"></link>
+
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
 </head>
 
 <body>
@@ -19,15 +21,22 @@
             </div>
         </section>
         <section id="content">
-            <div id="map" style="float:left; width: 50%"></div>
+            <div id="map" style="float:left; width: 50%">
+                <div id="popup"></div>
+            </div>
             <div style="float:right; width: 50%;"></div>
         </section>
         <aside id="log-area" style="width: 100%; background-color: lightgray; float: left; height: 300px; overflow:scroll;">
         </aside>
     </div>
-    <script src="../scripts/jquery-3.3.1.min.js"></script>
 
+    <script src="https://code.jquery.com/jquery-2.2.3.min.js"></script>
+    <!-- <script src="../scripts/jquery-3.3.1.min.js"></script> -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
     <script src="../scripts/ol.js"></script>
+
+    <script src="market.layer.js"></script>
+
     <script type="text/javascript">
         jQuery(document).ready(function() {
 
@@ -51,54 +60,13 @@
             });
 
             window.LOGAREA = document.getElementById("log-area");
-            var vectorSource = new ol.source.Vector({});
-
-            var hqMarketLocation = new ol.Feature({
-                geometry: new ol.geom.Point(ol.proj.transform([28.895751, 41.050335], 'EPSG:4326', 'EPSG:3857')),
-                name: 'Market HQ',
-                population: 4000,
-                rainfall: 500
-            });
-
-            // for (var i = 1; i < 299; i++) {
-            //     var iconFeature = new ol.Feature({
-            //         geometry: new
-            //         ol.geom.Point(ol.proj.transform([Math.random() * 360 - 180, Math.random() * 180 - 90], 'EPSG:4326', 'EPSG:3857')),
-            //         name: 'Market ' + i,
-            //         population: 4000,
-            //         rainfall: 500
-            //     });
-
-            //     vectorSource.addFeature(iconFeature);
-            // }
-
-            vectorSource.addFeature(hqMarketLocation);
-
-            var hqMarketIcon = new ol.style.Style({
-                image: new ol.style.Icon(({
-                    anchor: [0.5, 50],
-                    anchorXUnits: 'fraction',
-                    anchorYUnits: 'pixels',
-                    opacity: '1',
-
-                    //https://gis.stackexchange.com/questions/130603/how-to-resize-a-feature-and-prevent-it-from-scaling-when-zooming-in-openlayers-3
-                    // 
-                    scale: 0.05,
-                    src: '../img/050-shop.png'
-                }))
-            });
-
-            var hqMarketVectorLayer = new ol.layer.Vector({
-                source: vectorSource,
-                style: hqMarketIcon
-            });
 
             var map = new ol.Map({
                 target: 'map',
                 layers: [
                     new ol.layer.Tile({
                         source: new ol.source.OSM()
-                    }), hqMarketVectorLayer
+                    }), marketVectorLayer
                 ],
                 view: new ol.View({
                     // BingMap'ten alınan koordinat 41,050335, 28,895751 
@@ -108,6 +76,13 @@
                 })
             });
 
+            var popupOverlay = new ol.Overlay({
+                element: document.getElementById("popup"),
+                stopEvent: false
+            });
+
+            map.addOverlay(popupOverlay);
+
             // ---------------- HARITA OLAYLARI -------------
             map.on('click', function(event) {
                 if (mapClickListen) {
@@ -115,6 +90,24 @@
                     label.appendChild(document.createTextNode("click: [0]=" + event.coordinate[0] + " [1]=" + event.coordinate[1]))
                     window.LOGAREA.prepend(document.createElement("br"));
                     window.LOGAREA.prepend(label);
+                }
+
+                debugger;
+                $popup = $('#popup');
+                var clickedFeature = map.forEachFeatureAtPixel(event.pixel, function(feature) {
+                    return feature;
+                });
+                if (clickedFeature) {
+                    var coordinates = clickedFeature.getGeometry().getCoordinates();
+                    popupOverlay.setPosition(coordinates);
+                    $popup.popover({
+                        placement: 'top',
+                        html: true,
+                        content: clickedFeature.get('name')
+                    });
+                    $popup.popover('show')
+                } else {
+                    $popup.popover('destroy')
                 }
             });
 
